<resources>
    <string name="app_name">Laundry Web</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">My Account</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_settings">Settings</string>
    <string name="make_order">Make order</string>
    <string name="drawer">Drawer</string>
    <string name="logo">logo</string>
    <string name="background">background</string>
</resources>