<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ecommerce.laundryweb.ui.home.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.ecommerce.laundryweb.ui.development.DevelopmentFragment"
        android:label="@string/title_orders" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ecommerce.laundryweb.ui.development.DevelopmentFragment"
        android:label="@string/title_notifications" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.ecommerce.laundryweb.ui.development.DevelopmentFragment"
        android:label="@string/title_account" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.ecommerce.laundryweb.ui.development.DevelopmentFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_development" />

</navigation>