<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background"
        android:src="@mipmap/background"
        tools:src="@mipmap/background"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"
        android:elevation="0dp"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@mipmap/logo"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.01"
        android:contentDescription="@string/logo"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toTopOf="@id/imageBackground"
        app:layout_constraintStart_toStartOf="@id/imageBackground"
        app:layout_constraintEnd_toEndOf="@id/imageBackground"/>


    <ImageButton
        android:id="@+id/btnDrawer"
        android:layout_width="@dimen/drawer_icon_size"
        android:layout_height="@dimen/drawer_icon_size"
        app:layout_constraintEnd_toEndOf="@id/guideVEnd"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/drawer"
        android:scaleType="fitEnd"
        android:adjustViewBounds="true"
        android:src="@mipmap/ic_drawer"
        android:background="@android:color/transparent"
        android:layout_marginTop="30dp"
        android:layout_gravity="end"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guideVStart"
        app:layout_constraintEnd_toEndOf="@id/guideVEnd"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"/>

    <!-- Guidelines -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideVStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideVEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

</androidx.constraintlayout.widget.ConstraintLayout>